- adding method override for PUT and DELETE requests - modified some icons to simulate a person liking a tweet (from skeleton heart to a filled heart - fixed a problem where icons do not become visible at hover on article (becomes visible only when hovering on icons) - created a route on tweets.js to handle liking tweets - created a function on data-helpers.js to modify a tweet's like property when it is liked

--- a/public/scss-styles/_all-tweet.scss
+++ b/public/scss-styles/_all-tweet.scss
@@ -71,7 +71,7 @@ article.tweet {
     opacity: 1;
   }
 
-  :hover .icons{
+  &:hover .icons{
     visibility: visible;
   }
 }
